<resources>
    <string name="app_name">StudyBreak</string>
    <string name="title_activity_display_timer">DisplayTimer</string>
    <string name="water_break">Water</string>
    <string name="stretch_break">Stretch</string>
    <string name="food_break">Food</string>
    <string name="other_break">Other</string>
    <string name="minutes"> minutes</string>
    <string name="no_breaks">You do not have any breaks! Please select a break by pressing the + button above.</string>
    <string name="add_button">+</string>
    <string name="start_button">Start Studying</string>
    <string name="every">every</string>
    <string name="break_for">break for</string>
</resources>
